# guidata

./: .coveragerc  .env  .env.template  .gitignore  .hgignore  .hgtags  .project  .pydevproject  .readthedocs.yaml  .spyderproject  CHANGELOG.md  CHANGELOG.md.bak  LICENSE  MANIFEST.in  README  README.md  babel.cfg  build_chm.bat  build_dist.bat  build_doc.bat  changelog  changelog.md  conftest.py  gettext_compile.py  gettext_scan.py  guidata-tests.desktop  guidata-tests.py  private.hgtags  pyproject.toml  requirements-min.txt  requirements.txt  run_test_launcher.bat  setup.cfg  setup.py  upload.bat
.github/: copilot-instructions.md
.github/workflows/: build.yml  build_deploy.yml  python-package.yml  test.yml  test_pyqt5.yml  test_pyqt6.yml
dev/: README.md  pip_list.txt  requirements.txt
doc/: basic_example.py  conf.py  development.rst  examples.rst  examples.rst.bak  index.rst  installation.rst  overview.rst  reference.rst  requirements.rst  requirements.txt  update_requirements.py  widgets.rst
doc/autodoc/: autodoc_example.py  autodoc_example1.py  index.rst
doc/dev/: contribute.rst  gitworkflow.rst  howto.rst  index.rst  platform.rst  v2_to_v3.csv  v2_to_v3.rst
doc/reference/: configtools.rst  core.rst  dataset.rst  disthelpers.rst  guitest.rst  index.rst  qthelpers.rst  userconfig.rst  utils.rst  widgets.rst
doc/reference/dataset/: backends.rst  conv.rst  dataitems.rst  datatypes.rst  index.rst  io.rst  jsonschema.rst  qtwidgets.rst
doc/release_notes/: index.rst  release_1.md  release_2.md  release_3.00.md  release_3.01.md  release_3.02.md  release_3.03.md  release_3.04.md  release_3.05.md  release_3.06.md  release_3.07.md  release_3.08.md  release_3.09.md  release_3.10.md  release_3.11.md  release_3.12.md  release_3.13.md  release_3.14.md  release_3.15.md
doc_src/: basic_example.py  index.rst  installation.rst  overview.rst
guidata/: __init__.py  __init__.py.bak  config.py  config.py.bak  configtools.py  disthelpers.py  encoding.py  env.py  gettext_helpers.py  guitest.py  guitest.py.bak  hdf5io.py  jsonio.py  py3compat.py  qtarrayeditor.py  qthelpers.py  qtwidgets.py  userconfig.py  userconfigio.py  utils.py
guidata/dataset/: __init__.py  autodoc.py  autodoc_method.py  backends.py  conv.py  dataitems.py  datatypes.py  datatypes.py.bak  hdf5io.py  iniio.py  io.py  jsonio.py  jsonschema.py  note_directive.py  qtitemwidgets.py  qtwidgets.py  textedit.py
guidata/dataset/io/: __init__.py  base.py  h5fmt.py  inifmt.py  jsonfmt.py
guidata/editors/: __init__.py  arrayeditor.py  dicteditor.py  importwizard.py  texteditor.py
guidata/io/: __init__.py  base.py  h5fmt.py  inifmt.py  jsonfmt.py
guidata/locale/fr/LC_MESSAGES/: guidata.mo  guidata.po
guidata/qt/: QtCore.py  QtDesigner.py  QtGui.py  QtSvg.py  QtWebKit.py  __init__.py  compat.py
guidata/qtpy/: QtCore.py
guidata/tests/: __init__.py  _all_tests.py  activable_dataset.py  activable_items.py  all_features.py  all_items.py  bool_selector.py  callbacks.py  config.py  conftest.py  data.py  datasetgroup.py  disthelpers.py  editgroupbox.py  hdf5.py  inheritance.py  item_order.py  loadsave_hdf5.py  loadsave_json.py  rotatedlabel.py  test.h5  test_activable_dataset.py  test_activable_dataset.py.bak  test_activable_items.py  test_activable_items.py.bak  test_all_features.py  test_all_features.py.bak  test_all_items.py  test_all_items.py.bak  test_arrayeditor.py  test_arrayeditor.py.bak  test_bool_selector.py  test_bool_selector.py.bak  test_callbacks.py  test_callbacks.py.bak  test_codeeditor.py  test_codeeditor.py.bak  test_collectionseditor.py  test_collectionseditor.py.bak  test_config.py  (+34 more)
guidata/tests/data/genreqs/: pyproject.toml  requirements.rst  setup.cfg
guidata/tests/dataset/: test_activable_dataset.py  test_activable_items.py  test_all_features.py  test_all_items.py  test_all_items_readonly.py  test_auto_apply.py  test_backends.py  test_bool_selector.py  test_button_item.py  test_callbacks.py  test_computed_items.py  test_datasetgroup.py  test_editgroupbox.py  test_inheritance.py  test_item_order.py  test_jsonschema.py  test_loadsave_hdf5.py  test_loadsave_json.py  test_rotatedlabel.py  test_separator_item_trailing.py
guidata/tests/unit/: test_assert_datasets_equal.py  test_boolitem_numpy.py  test_choice_tuple_serialization.py  test_config.py  test_data.py  test_dataset_class_config.py  test_dataset_from_func.py  test_dataset_to_html.py  test_disthelpers.py  test_force_allow_none.py  test_genreqs.py  test_h5fmt.py  test_h5fmt_datetime.py  test_item_order.py  test_jsonfmt.py  test_no_qt.py  test_text.py  test_theme.py  test_translations.py  test_updaterestoredataset.py  test_validationmodes.py
guidata/tests/widgets/: test_arrayeditor.py  test_arrayeditor_unit.py  test_codeeditor.py  test_collectionseditor.py  test_console.py  test_iconbrowser.py  test_theme.py
guidata/utils/: __init__.py  cleanup.py  conv.py  disthelpers.py  encoding.py  genreqs.py  gettext_helpers.py  gitreport.py  misc.py  qt_scraper.py  securebuild.py  translations.py
guidata/widgets/: __init__.py  about.py  arrayeditor.py  codeeditor.py  collectionseditor.py  dataframeeditor.py  dockable.py  iconbrowser.py  importwizard.py  nsview.py  objecteditor.py  rotatedlabel.py  syntaxhighlighters.py  texteditor.py
guidata/widgets/arrayeditor/: __init__.py  arrayeditor.py  arrayhandler.py  datamodel.py  edirotwidget.py  editorwidget.py  utils.py
guidata/widgets/console/: __init__.py  base.py  calltip.py  dochelpers.py  internalshell.py  interpreter.py  mixins.py  shell.py  shell.py.bak  terminal.py
img_src/: guidata.pdn
scripts/: __init__.py  build_dist.bat  build_doc.bat  clean_up.bat  gettext.bat  guidata-tests-py3  internationalization_postprocess.py  internationalization_preprocess.py  run_coverage.bat  run_pylint.bat  run_pytest.bat  run_test_launcher.bat  upgrade_env.bat  utils.bat
utils/: qthelpers.py
