# guidata setup configuration file

# Important note:
# Requirements are parsed by utils\genreqs.py to generate documentation

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "guidata"
authors = [{ name = "Codra", email = "p.raybaut@codra.fr" }]
description = "Automatic GUI generation for easy dataset editing and display"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
    "Topic :: Utilities",
]
requires-python = ">=3.8, <4"
dependencies = ["h5py>=3.0", "NumPy>=1.21", "QtPy>=1.9", "requests", "tomli"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PlotPyStack/guidata/"
Documentation = "https://guidata.readthedocs.io/en/latest/"

[project.gui-scripts]
guidata-tests = "guidata.tests:run"

[project.optional-dependencies]
dev = ["black", "isort", "pylint", "Coverage"]
doc = [
    "PyQt5",
    "pillow",
    "pandas",
    "sphinx>6",
    "myst_parser",
    "sphinx-copybutton",
    "sphinx_qt_documentation",
    "python-docs-theme",
]
test = ["pytest", "pytest-xvfb"]

[tool.setuptools.packages.find]
include = ["guidata*"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.svg", "*.mo", "*.cfg", "*.toml"]

[tool.setuptools.dynamic]
version = { attr = "guidata.__version__" }
