# guidata setup configuration file

# Important note:
# Requirements are parsed by utils\genreqs.py to generate documentation

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "guidata"
authors = [{ name = "Codra", email = "p.raybaut@codra.fr" }]
description = "Automatic GUI generation for easy dataset editing and display"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
    "Topic :: Utilities",
]
requires-python = ">=3.9, <4"
dependencies = ["h5py>=3.1", "NumPy>=1.19", "QtPy>=1.9", "requests", "tomli"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PlotPyStack/guidata/"
Documentation = "https://guidata.readthedocs.io/en/latest/"

[project.gui-scripts]
guidata-tests = "guidata.tests:run"

[project.optional-dependencies]
dev = ["ruff", "pylint", "Coverage"]
doc = [
    "PyQt5",
    "pillow",
    "pandas",
    "sphinx>6",
    "myst_parser",
    "sphinx-copybutton",
    "sphinx_qt_documentation",
    "python-docs-theme",
]
test = ["pytest", "pytest-xvfb"]

[tool.setuptools.packages.find]
include = ["guidata*"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.svg", "*.mo", "*.cfg", "*.toml"]

[tool.setuptools.dynamic]
version = { attr = "guidata.__version__" }

[tool.pytest.ini_options]
addopts = "guidata"

[tool.ruff]
exclude = [".git", ".vscode", "build", "dist", "guidata/external"]
line-length = 88                                                   # Same as Black.
indent-width = 4                                                   # Same as Black.
target-version = "py39"                                            # Assume Python 3.9.

[tool.ruff.lint]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I", "NPY201"]
ignore = [
    "E203", # space before : (needed for how black formats slicing)
]

[tool.ruff.format]
quote-style = "double"            # Like Black, use double quotes for strings.
indent-style = "space"            # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
line-ending = "auto"              # Like Black, automatically detect the appropriate line ending.

[tool.ruff.lint.per-file-ignores]
"doc/*" = ["E402"]
