# guidata setup configuration file

# Important note:
# Requirements (see [options]) are parsed by doc\genreqs.py to generate documentation

[metadata]
name = guidata
version = attr: guidata.__version__
author = Codra
author_email = p.raybaut@codra.fr
url = https://codra-ingenierie-informatique.github.io/guidata/
description = Signal and image processing software
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities,
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8, <4
install_requires =
    h5py>=3.0
    NumPy>=1.21
    QtPy>=1.9
packages = find:
include_package_data = True

[options.extras_require]
dev =
    black
    isort
    pylint
    Coverage
doc =
    sphinx
    sphinx_copybutton
