# guidata setup configuration file

# Important note:
# Requirements (see [options]) are parsed by utils\genreqs.py to generate documentation

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "guidata"
authors = [{ name = "Codra", email = "p.raybaut@codra.fr" }]
description = "Signal and image processing software"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Software Development :: User Interfaces",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8, <4"
dependencies = ["h5py>=3.0", "NumPy>=1.21", "QtPy>=1.9"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PlotPyStack/guidata/"
Documentation = "https://guidata.readthedocs.io/en/latest/"

[project.scripts]

[project.optional-dependencies]
dev = ["ruff", "pylint", "Coverage"]
doc = [
    "PyQt5",
    "pillow",
    "pandas",
    "sphinx",
    "sphinx-copybutton",
    "sphinx_qt_documentation",
    "python-docs-theme",
]
test = ["pytest", "pytest-cov", "pytest-qt", "pytest-xvfb"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"*" = ["*.png", "*.svg", "*.mo", "*.cfg", "*.toml", "*.rst"]

[tool.setuptools.dynamic]
version = { attr = "guidata.__version__" }
