
[metadata]
name = guidata
version = attr: guidata.__version__
author = Codra
author_email = p.raybaut@codra.fr
url = https://github.com/PlotPyStack/guidata/
description = Signal and image processing software
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Software Development :: User Interfaces
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.9, <4
install_requires =
    h5py>=3.0
    NumPy>=1.21
    QtPy>=1.9
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = guidata*

[options.extras_require]
dev =
    ruff
    pylint
    Coverage
doc =
    PyQt5
    pillow
    pandas
    sphinx
    sphinx-copybutton
    sphinx_qt_documentation
    python-docs-theme
test =
    pytest
    pytest-cov
    pytest-qt
    pytest-xvfb
